@@ -16,8 +16,8 @@ function course_search_menu() {
     "page_callback" => "course_search_display_search",
     "access_arguments" => array('access_course_search'),
     "page_settings" => array(
-      "page_has_search" => FALSE,
-      "page_banner_is_link" => TRUE,
+      
+      
       "page_hide_report_error" => TRUE,
       "target" => "_blank",
       "menu_icon" => fp_get_module_path('course_search') . "/icons/book_go.png",
@@ -42,8 +42,8 @@ function course_search_menu() {
     "page_arguments" => array("course_search_settings_form", "system_settings"),
     "access_arguments" => array("administer_course_search"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
-      "page_banner_is_link" => TRUE,
+      
+      
       "page_hide_report_error" => TRUE,      
       "menu_icon" => fp_get_module_path('course_search') . "/icons/book_go.png",
       "menu_links" => array(         
@@ -62,8 +62,8 @@ function course_search_menu() {
     "page_callback" => "course_search_display_courses",
     "access_arguments" => array('access_course_search'),
     "page_settings" => array(
-      "page_has_search" => FALSE,
-      "page_banner_is_link" => TRUE,
+      
+      
       "page_hide_report_error" => TRUE,
     ),
     "type" => MENU_TYPE_CALLBACK,
@@ -75,7 +75,7 @@ function course_search_menu() {
     "page_callback" => "course_search_display_edit_courses",
     "access_arguments" => array("can_update_course_info_details"),
     "page_settings" => array(
-      "page_has_search" => FALSE,      
+            
       "menu_links" => array(
         0 => array(
           "text" => "Back to Course Search",
@@ -94,8 +94,8 @@ function course_search_menu() {
     "page_arguments" => array("course_search_edit_course_details_form"),
     "access_arguments" => array("can_update_course_info_details"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
-      "page_banner_is_link" => TRUE,
+      
+      
       "menu_links" => array(
         0 => array(
           "text" => "Back to Course Search",
