@@ -31,7 +31,7 @@ function encryption_menu() {
     "page_arguments" => array("encryption_settings_form"),
     "access_arguments" => array("administer_encryption"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
+      "menu_icon" => fp_get_module_path('system') . "/icons/lock.png",
       "menu_links" => array(         
         0 => array(
           "text" => "Admin Console",
