@@ -53,7 +53,6 @@ function engagements_menu()
     "page_arguments" => array("engagements_imap_settings_form", "system_settings"),
     "access_arguments" => array("administer_engagements"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
       "menu_icon" => fp_get_module_path('system') . "/icons/cog.png",
       "menu_links" => array(
         0 => array(
@@ -75,7 +74,6 @@ function engagements_menu()
     "page_arguments" => array("engagements_sms_settings_form", "system_settings"),
     "access_arguments" => array("administer_engagements"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
       "menu_icon" => fp_get_module_path('system') . "/icons/cog.png",
       "menu_links" => array(
         0 => array(
@@ -98,7 +96,6 @@ function engagements_menu()
     "page_arguments" => array("engagements_mass_sms_form"),
     "access_arguments" => array("can_send_mass_sms"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
       "menu_icon" => fp_get_module_path('system') . "/icons/transmit_go.png",
       "menu_links" => array(
         0 => array(
