@@ -12,9 +12,9 @@ function student_search_menu() {
     "page_arguments" => array("student_search_settings_form", "system_settings"),
     "access_arguments" => array("administer_student_search"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
+      
       "menu_icon" => fp_get_module_path('student_search') . "/icons/database_gear.png",            
-      "page_banner_is_link" => TRUE,
+      
       "page_hide_report_error" => TRUE,      
       "menu_links" => array(         
         0 => array(
