@@ -476,8 +476,6 @@ function system_menu() {
     "page_arguments" => array("system_settings_form", "system_settings"),
     "access_arguments" => array("de_can_administer_system_settings"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
-      "page_banner_is_link" => TRUE,
       "page_hide_report_error" => TRUE,
       "menu_icon" => fp_get_module_path('system') . "/icons/cog.png",
       "menu_links" => array(         
@@ -500,8 +498,6 @@ function system_menu() {
     "page_arguments" => array("system_school_data_form", "system_settings"),
     "access_arguments" => array("de_can_administer_school_data"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
-      "page_banner_is_link" => TRUE,
       "page_hide_report_error" => TRUE,
       "menu_icon" => fp_get_module_path('system') . "/icons/cog_edit.png",
       "menu_links" => array(         
@@ -525,8 +521,6 @@ function system_menu() {
     "page_arguments" => array("system_modules_form"),
     "access_arguments" => array("administer_modules"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
-      "page_banner_is_link" => TRUE,
       "page_hide_report_error" => TRUE,
       "menu_icon" => fp_get_module_path('system') . "/icons/bricks.png",      
       "menu_links" => array(         
@@ -564,9 +558,7 @@ function system_menu() {
     "page_arguments" => array("system_execute_php_form", "system_settings"),
     "access_arguments" => array("execute_php"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
-      "menu_icon" => fp_get_module_path('system') . "/icons/page_white_php.png",      
-      "page_banner_is_link" => TRUE,
+      "menu_icon" => fp_get_module_path('system') . "/icons/page_white_php.png",
       "page_hide_report_error" => TRUE,      
       "menu_links" => array(         
         0 => array(
