@@ -66,9 +66,9 @@ function tinymce_menu() {
     "page_arguments" => array("tinymce_config_form", "system_settings"),
     "access_arguments" => array("administer_tinymce"),
     "page_settings" => array(
-      "page_has_search" => FALSE,
+      
       "menu_icon" => fp_get_module_path('tinymce') . "/icons/text_dropcaps.png",            
-      "page_banner_is_link" => TRUE,
+      
       "page_hide_report_error" => TRUE,
       "menu_links" => array(         
         0 => array(
