@@ -6,6 +6,8 @@ FlightPath 6.x Changelog
   Added more permissions and security checks when accessing files and content, especially of the user is a student and just trying out
   URLs.  We make sure they do not have access to any content, comments, or files they aren't supposed to see.  
   
+  Added icon for encryption module, removed old, unused settings from hook_menu items throughout FlightPath.
+  
 
 2021-12-28
   Adding new module to core: encryption, and setting up key variable in settings.php on installation (giving it a random string value at the time of
